# computer-use-python

./: .gitignore  README.md  pyproject.toml
cupi/: callbacks.py  cli.py  config.py  logger.py  main.py  run.py
cupi/computer_use_demo/tools/: computer.py
src/cupi/: callbacks.py  cli.py  config.py  logger.py  main.py
src/cupi/computer_use_demo/: loop.py
src/cupi/computer_use_demo/tools/: computer.py
